Ajuste classe Security_Util